modify image description paragraph style rules to stop overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ footer {
     background-color:black;
     color: white;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0; 
 }
 
@@ -83,14 +83,14 @@ a {
 
 #contact-outer {
     width: 25%;
-    height: 100px;
+    height: 50px;
     margin: 0 auto;
 }
 
 #contact {
     margin: 0 auto;
     width: 100%;
-    height: 100px;
+    height: 50px;
     background-color: black;
     color: white; 
     border-radius: 15px;
@@ -144,7 +144,7 @@ a {
 .button {
     margin: 100px 0 100px 0;
     width: 25%;
-    height: 100px;
+    height: 50px;
     background-color: black;
     color: white; 
     border-radius: 15px;
@@ -158,10 +158,12 @@ a {
 
 #traitor {
     float: left;
+    margin-left: 50px;
 }
 
 #loyalist {
     float: right;
+    margin-right: 50px;
 }
 
 
@@ -315,9 +317,9 @@ h2 {
     width: 150px;
     height: 150px;                      
     border: 1px solid blue;
-    overflow: hidden;
-    
-    
+    /*overflow: hidden;*/
+    word-break: break-all;
+    white-space: normal;
 }
 
 .image-container-white img {
